# Remote-Driving-OK

./: .cursorrules  .gitattributes  .gitignore  5WHY_ANALYSIS_INDEX.md  5WHY_DEEP_ANALYSIS.md  5WHY_FINAL_SUMMARY.md  5WHY_FINAL_VERIFICATION_POST_FIX.md  5WHY_QUICK_REFERENCE.md  5WHY_VISUAL_ANALYSIS.md  ANALYSIS_COMPLETION_SUMMARY.md  ANALYSIS_DEEP_DIVE_5WHY.md  BUILD_GUIDE.md  CONFIG_MIGRATION.md  DIAGNOSTIC_REPORT.md  DIAGNOSTIC_VISUAL_SUMMARY.txt  DOCKER_USAGE.md  DOCUMENT_INDEX_MASTER.md  ENCODE_DECODE_ANALYSIS_INDEX.md  ENCODE_DECODE_CONSISTENCY_ANALYSIS.md  ENCODE_DECODE_FIX_COMPLETION_REPORT.md  ENCODE_DECODE_INCONSISTENCY_QUICK_REF.md  ENCODE_DECODE_KEY_FINDINGS.md  ENCODE_DECODE_VISUAL_ANALYSIS.md  FINAL_ROOT_CAUSE_ANALYSIS.md  FIX_IMPLEMENTATION_SUMMARY.md  FIX_INSTRUCTIONS.sh  GITHUB_UPLOAD_GUIDE.md  M0_COMPLETE.md  M0_COMPLETION_REPORT.md  M0_DEPLOYMENT_STATUS.md  M0_FINAL_SUMMARY.md  M0_FINAL_VERIFICATION.md  M0_STATUS.md  M0_SUMMARY.md  M0_VERIFICATION_REPORT.md  M0_VERIFICATION_SUMMARY.md  M1_ARCHITECTURE.md  M1_READY_TO_START.md  PROJECT_STRUCTURE.md  QUICKSTART_REFACTORED.md  (+39 more)
Vehicle-side/: CMakeLists.txt  Dockerfile.dev  Dockerfile.prod  README.md  build.sh  debug.sh  docker-compose.yml  docker-entrypoint-dev.sh  run.sh
Vehicle-side/config/: vehicle_config.json.example  vehicle_config.yaml
Vehicle-side/scripts/: run.sh
Vehicle-side/src/: chassis_data_generator.cpp  chassis_data_generator.h  control_protocol.cpp  control_protocol.h  main.cpp  mqtt_handler.cpp  mqtt_handler.h  ros2_bridge.cpp  ros2_bridge.h  vehicle_config.cpp  vehicle_config.h  vehicle_controller.cpp  vehicle_controller.h  whip_publisher.cpp  whip_publisher.h  zlm_control_channel.cpp  zlm_control_channel.h
Vehicle-side/src/common/: error_code.h  log_macros.h  logger.cpp  logger.h
backend/: CMakeLists.txt  Dockerfile  Dockerfile.dev  README.dev.md  README.md  docker-compose.yml  docker-entrypoint-dev.sh  main.py  requirements.txt
backend/api/: openapi.yaml
backend/config/: backend_config.yaml
backend/migrations/: 001_initial_schema.sql  002_sessions_locks_mvp.sql  003_sessions_control_secret.sql
backend/scripts/: build.sh  run.sh
backend/src/: health_handler.cpp  health_handler.h  main.cpp
backend/src/api/: session_handler.cpp  vin_handler.cpp  vin_handler.h
backend/src/auth/: jwt_validator.cpp  jwt_validator.h
backend/src/common/: logger.cpp  logger.h  utils.cpp  utils.h
backend/src/db/: repository.cpp  repository.h  vini_repository.h
backend/src/middleware/: version_middleware.cpp  version_middleware.h
backend/src/protocol/: fault_code.cpp  fault_code.h  message_signature.cpp  message_signature.h  message_types.fbs  message_types.h
backend/src/session/: teleop_state.cpp  teleop_state.h
backend/src/telemetry/: telemetry_collector.cpp  telemetry_collector.h  telemetry_data.h
backend/static/: add-vehicle.html  get-token.html
carla-bridge/cpp/: CMakeLists.txt
carla-bridge/cpp/src/: carla_runner.cpp  carla_runner.h  json_parse.cpp  json_parse.h  main.cpp  mqtt_bridge.cpp  mqtt_bridge.h  rtmp_pusher.cpp  rtmp_pusher.h
client/: .clang-format  .clang-tidy  .gitignore  BUILD.md  CMakeLists.txt  DOCKER_BUILD.md  Dockerfile.client-dev  Dockerfile.client-dev.from-full  Dockerfile.fonts  Dockerfile.prod  IMPLEMENTATION.md  INTEGRATION.md  LOGIN_DISPLAY_FIX.md  README.md  SUMMARY.md  VERIFY_TEST_FLOW.md  build.sh  conanfile.py  debug.sh  run.sh  shaders.qrc.in  verify-and-run.sh  客户端架构设计.md
client/config/: client_config.yaml
client/docs/: ARCHITECTURE_RISK_REVIEW.md  CALLCHAIN_AND_ARCHITECTURE.md  GATE_A_CLIENT_CONTROL_SAFETY.md  OBSERVABILITY_METRICS.md
client/plugins/noop/: noop_plugin.cpp  noop_plugin.json
client/qml/: .qmllint.ini  AppContext.qml  ConnectionsDialog.qml  ControlPanel.qml  DrivingHUD.qml  DrivingInterface.qml  LoginDialog.qml  LoginPage.qml  RemoteDrivingClient_qml_module_dir_map.qrc  StatusBar.qml  SteeringWheel.qml  Text.qml  VehicleSelectionDialog.qml  VehicleSelectionPage.qml  VideoView.qml  fonts.qml  main.qml  qmldir  remote-driving-cpp.qmltypes  update-fonts.sh
client/qml/DrivingFacade/: .gitignore  qmldir
client/qml/components/: ControlButton.qml  DashboardCard.qml  DrivingInterface.Controls.qml  DrivingInterface.Dashboard.qml  DrivingInterface.VideoPanels.qml  FaultIndicator.qml  GearIndicator.qml  NetworkStatusBar.qml  RenderMonitor.qml  SafetyWarningOverlay.qml  SpeedGauge.qml  SteeringIndicator.qml  VerticalDivider.qml  VideoPanel.qml
client/qml/icon/: README.md
client/qml/regression/: README.md  scenarios.md
client/qml/shell/: DrivingStageHost.qml  LoginStage.qml  SessionConstants.qml  SessionWorkspace.qml  VehiclePickStage.qml  qmldir
client/qml/styles/: Theme.qml
client/reports/: clang-tidy-baseline.txt
client/scripts/: build.sh  run.sh
client/shaders/: nv12_dmabuf.frag  nv12_dmabuf.vert  video.frag  video.vert
client/src/: authmanager.cpp  authmanager.h  h264decoder.cpp  h264decoder.h  main.cpp  mqttcontroller.cpp  mqttcontroller.h  nodehealthchecker.cpp  nodehealthchecker.h  vehiclemanager.cpp  vehiclemanager.h  vehiclestatus.cpp  vehiclestatus.h  videorenderer.cpp  videorenderer.h  webrtcclient.cpp  webrtcclient.h  webrtcstreammanager.cpp  webrtcstreammanager.h
client/src/app/: client_app_bootstrap.cpp  client_app_bootstrap.h  client_crash_diagnostics.cpp  client_crash_diagnostics.h  client_display_runtime_policy.cpp  client_display_runtime_policy.h  client_logging_setup.cpp  client_logging_setup.h  client_perf_diag_env.cpp  client_perf_diag_env.h  client_platform_gate.cpp  client_platform_gate.h  client_present_composition_diag.cpp  client_present_composition_diag.h  client_present_health_auto_env.cpp  client_present_health_auto_env.h  client_startup_readiness_gate.cpp  client_startup_readiness_gate.h  client_startup_tcp_gate.cpp  client_startup_tcp_gate.h  client_system_stall_diag.cpp  client_system_stall_diag.h  client_window_frame_policy.cpp  client_window_frame_policy.h  client_x11_deep_diag.cpp  (+3 more)
client/tests/: test_systemstatemachine.cpp
vehicle/: CMakeLists.txt  Dockerfile  docker-compose.yml
(+711 files in other folders)
